Make sure text doesn't overlap for tooltips

--- a/web-frontend/modules/core/assets/scss/components/tooltip.scss
+++ b/web-frontend/modules/core/assets/scss/components/tooltip.scss
@@ -42,6 +42,7 @@
   color: $white;
   padding: 0 8px;
   text-align: center;
+  width: max-content;
 
   @include fixed-height(26px, 12px);
 }
